--- a/styles/custom-style.css
+++ b/styles/custom-style.css
@@ -422,3 +422,25 @@ th,td{
   width: 25%;
   
 }
+
+.next:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+
+
+.next {
+  background-color: black;
+  color: white;
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  text-decoration: none;
+  display: inline-block;
+  padding: 8px 16px;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.round {
+  border-radius: 10%;
+}
