--- a/styles/custom-style.css
+++ b/styles/custom-style.css
@@ -89,7 +89,7 @@ body {
 
 #section1 {
 	padding-top: 50px;
-	height: 280px;
+	height: 320px;
 	color: black;
 	background-color: white;
 }
@@ -139,4 +139,10 @@ body {
 .tooltip {
 	width: 220px;
 	height: 120px;
+}
+
+.flex-container {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
