--- a/styles/custom-style.css
+++ b/styles/custom-style.css
@@ -1,5 +1,5 @@
 blockquote {
-	color: #777777;
+	color: #161625;
 	font-style: normal;
 	font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	font-size: 13px;
@@ -8,82 +8,43 @@ blockquote {
 
 body {
 	-webkit-tap-highlight-color: #0085A1;
+	background: #161625!important;
 }
 
-.header-confirmed {
-	color: black;
-}
-
-.header-cprice {
-	color: #007bff
-}
-
-.header-dhigh {
-	color: #28a745
-}
-
-.header-dlow {
-	color: #000000;
-}
-
-.header-dopen {
-	color: #FFA500
-}
-
-.header-change {
-	color: #000000;
-}
-
-.header-fontstyle {
-	font-family: archia
+.table-header-right {
+	text-align: right;
 }
 
 .delta {
-	font-size: 13px;
+	font-size: 0.8em;
 }
 
-.numberValue {
+.header-confirmed {
+	color: #ff073a;
 	text-align: right;
-	margin-left: 1px;
-	width: 1%
+	padding-right: 10px;
+	font-size: 1.35em;
 }
 
-.numberValueRed {
-	color: #FF0000;
+.header-active {
+	color: #007bff;
 	text-align: right;
-	margin-left: 1px;
-	width: 1%
+	padding-right: 5px;
+	font-size: 1.35em;
 }
 
-.numberValueGreen {
+.header-recovered {
 	color: #28a745;
 	text-align: right;
-	margin-left: 1px;
-	width: 1%
+	padding-right: 10px;
+	font-size: 1.35em;
 }
 
-.numberFirst {
-	text-align: left;
-	margin-left: 1px;
-	width: 2%;
-	color: black;
-}
-
-.headerValue {
+.header-dead {
+	color: #6c757d;
 	text-align: right;
-	margin-left: 1px;
-	width: 1%
-}
-
-.headerFirst {
-	text-align: left;
-	margin-left: 1px;
-	width: 2%;
-	color: black;
-}
-
-.icon-bar {
-	font-size: 32px;
+	padding-right: 10px;
+	font-size: 1.35em;
 }
 
 #section1 {
@@ -96,10 +57,6 @@ body {
 h2 {
 	font-weight: 600;
 	font-size: 36px;
-}
-
-table {
-	font-size: 12px;
 }
 
 .main-class {
@@ -119,7 +76,6 @@ table {
 .active-button {
 	color: #FFFFFF;
 	background-color: #8e0505;
-	font-size: 11px;
 }
 
 .header-button {
@@ -128,4 +84,61 @@ table {
 
 .footer-button {
 	color: #ef7171;
+	padding-top: 20px;
+}
+
+.active-button {
+	color: #FFFFFF;
+	background-color: #8e0505;
+	padding-top: 20px;
+}
+
+#section1 {
+	color: white;
+	background-color: #161625;
+}
+
+.section-heading {
+	padding-top: 20px;
+}
+
+.table-body-tn-dt, 
+.table-body-kl-dt, 
+.table-body-ka-dt,
+.table-body-ap-dt,
+.table-body-tg-dt,
+.covidHeading {
+	color: grey;
+}
+
+.district-td-data {
+	text-align: center;
+	color: #ff073a;
+}
+
+.table-header-center {
+	text-align: center;
+	color: #ff073a;
+}
+
+.ju {
+	text-align: center;
+}
+
+.jum {
+	text-align: center;
+	background: #161625!important;
+}
+
+.cases-tested-in {
+	font-size: 4em;
+}
+
+.cases-time-in {
+	font-size: 14px;
+	color: grey;
+}
+
+.custom-tr {
+    border-bottom-style: hidden;
 }
